<resources>
    <string name="app_name">MohammadReza_Sematec</string>


    <string name="First_quarter">First quarter</string>
    <string name="Second_quarter">Second quarter</string>

    <string name="JAN">JAN</string>
    <string name="FEB">FEB</string>
    <string name="MAR">MAR</string>
    <string name="APR">APR</string>
    <string name="MAY">MAY</string>


    <!-- 03-->


    <string name="please_enter_your_profile">Please Insert Your Information!!!</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="email">Email</string>
    <string name="Age">Age</string>
    <string name="lastname">LastName</string>
    <string name="firstname">FirstName</string>
    <string name="login">Login</string>
    <string name="please_check_and_verify">Please Check And Verify!</string>
    <string name="verify">Verify</string>
    <string name="back">Back</string>
    <string name="add_new_user">Add_New_User</string>
    <string name="userlist">UserList</string>
    <string name="submit">Submit</string>
    <string name="enter_your_city_name">Enter Your City Name</string>
    <string name="navigationdrawer">NavigationDrawer...</string>
    <string name="goto_alertdialog_activity">Activity With Alert Dialog</string>
    <string name="menu">Menu</string>
    <string name="get_permission">Get Permission</string>
    <string name="Gson_Activity">Gson_Activity</string>
    <string name="getdata">getData</string>
    <string name="please_type_your_city_name">Please Type Your City Name</string>

    <!-- 03-->


</resources>
