<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".S03_Login_Page1"
    android:background="@color/BackGround_For_Relative_s03">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_profile"
            android:textSize="@dimen/Text_size"
            android:layout_margin="@dimen/Margin_For_View"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/FirstName"
                android:maxLength="18"
                android:inputType="textAutoComplete"
                android:padding="@dimen/padding_for_editText"
                android:hint="@string/firstname" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LastName"
                android:maxLength="20"
                android:inputType="textAutoComplete"
                android:padding="@dimen/padding_for_editText"
                android:hint="@string/lastname" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Age"
                android:maxLength="3"
                android:inputType="number"
                android:padding="@dimen/padding_for_editText"
                android:hint="@string/Age" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Mail"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding_for_editText"
                android:hint="@string/email" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Phone"
                android:maxLength="15"
                android:inputType="phone"
                android:padding="@dimen/padding_for_editText"
                android:hint="@string/phonenumber" />


        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_above="@id/UserList"
        android:text="@string/login" />

    <Button
        android:id="@+id/UserList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:text="@string/userlist" />


</RelativeLayout>