<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background_03_P02"
    tools:context=".S03_Login_Page2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/Margin_For_View"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_check_and_verify"
            android:textColor="@color/Month_Text_Color"
            android:textSize="@dimen/Text_size"
            android:textStyle="bold|italic" />


        <TextView
            android:id="@+id/txt_FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:textColor="@color/Month_Text_Color" />


        <TextView
            android:id="@+id/txt_LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:textColor="@color/Month_Text_Color" />


        <TextView
            android:id="@+id/txt_Age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:textColor="@color/Month_Text_Color" />


        <TextView
            android:id="@+id/txt_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:textColor="@color/Month_Text_Color" />


        <TextView
            android:id="@+id/txt_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:textColor="@color/Month_Text_Color" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_Verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_Back"
        android:text="@string/verify" />


    <Button
        android:id="@+id/btn_Back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="@string/back" />

</RelativeLayout>